--- a/src/app/player/town-dialog.html
+++ b/src/app/player/town-dialog.html
@@ -79,7 +79,7 @@
 	<div *ngIf="!loading" style="margin-top: 15px;">
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-xs-3 col-xs-offset-9">
+				<div class="col-3 offset-9">
 					<button mat-button class="mat-raised-button mat-primary" style="width: 100%;" (click)="dialogRef.close()">
 						Close
 					</button>
