feat(deps): ranking template pt2 - bootstrap 4

--- a/src/app/ranking/ranking.component.html
+++ b/src/app/ranking/ranking.component.html
@@ -44,7 +44,7 @@
 	            </div>
 
             </div>
-            <div class="col-12 col-md-12 col-lg-6 col-xl-5 title-paginator"></div>
+            <div class="col-12 col-md-12 col-lg-6 col-xl-5 title-paginator">
               <mat-paginator class="title-paginator"
                              [length]="count"
                              [pageSize]="size"
